test/langtools/tools/javac/lvti/T8236210.out
T8236210.java:26:9: compiler.err.annotation.type.not.applicable
1 error
